Envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log

  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/d/"
                route:
                  prefix_rewrite: "/v1.0/invoke/dcservice/method/justiceleague/"
                  auto_host_rewrite: true
                  #host_rewrite_literal: www.google.com
                  cluster: dapr
              - match:
                  prefix: "/m/"
                route:
                  prefix_rewrite: "/v1.0/invoke/marvelservice/method/avengers/"
                  auto_host_rewrite: true
                  #host_rewrite_literal: www.google.com
                  cluster: dapr
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: dapr
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: ROUND_ROBIN    
    load_assignment:
      cluster_name: dapr
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 3500    
  - name: dc_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: dc_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: dcservice
                port_value: 80
  - name: marvel_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: marvel_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: marvelservice
                port_value: 80
